# coc473-alc

./: README.md  pyproject.toml
src/: calcLib.py  matrixLib.py  readLib.py  readLibTP2.py  user.py
testsModel/: t2task2.txt
testsTP1/: result1-1.txt  result1-2.txt  result1-3.txt  result1-4.txt  result2-1.txt  result2-2.txt  test1-1.txt  test1-2.txt  test1-3.txt  test1-4.txt  test2-1.txt  test2-2.txt
testsTP2/: result-test1-1-1.txt  result-test1-1-2.txt  result-test1-1-3.txt  result-test1-2-2.txt  result-test1-2-3.txt  test1-1-1.txt  test1-1-2.txt  test1-1-3.txt  test1-2-1.txt
testsTP2/task1/: result-test1-1-1.txt  result-test1-1-2.txt  result-test1-1-3.txt  result-test1-2-1.txt  result-test1-2-2.txt  result-test1-2-3.txt  test1-2-2.txt  test1-2-3.txt
testsTP2/task2/: result-test2-1-1.txt  result-test2-1-2.txt  result-test2-2-1.txt  result-test2-2-2.txt  result-test2-3-1.txt  result-test2-3-2.txt  result-test2-3-3.txt  result-test2-4-1.txt  test2-1-1.txt  test2-1-2.txt  test2-2-1.txt  test2-2-2.txt  test2-3-1.txt  test2-3-2.txt  test2-3-3.txt  test2-4-1.txt
testsTP2/task3/: result-test3-1-1.txt  test3-1-1.txt
